--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 <body>
 
 <div class="navbar">
-  <div class="logo" onclick="window.location.href='home.html'">STREAM VERSE</div>
+  <div class="logo" onclick="window.location.href='index.html'">STREAM VERSE</div>
   <div class="nav-links">
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
       <a href="TVshow.html">TV Shows</a>
       <a href="movie.html" class="active">Movies</a>
       <a href="mylist.html">My List</a>
@@ -153,3 +153,4 @@
 
 </body>
 </html>
+
