--- a/TVshow.html
+++ b/TVshow.html
@@ -116,9 +116,9 @@
 
   <!-- Navbar -->
   <div class="navbar">
-    <div class="logo" onclick="window.location.href='home.html'">STREAM VERSE</div>
+    <div class="logo" onclick="window.location.href='index.html'">STREAM VERSE</div>
     <div class="nav-links">
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="TVshow.html" class="active">TV Shows</a>
       <a href="movie.html">Movies</a>
       <a href="mylist.html">My List</a>
@@ -277,3 +277,4 @@
   </script>
 </body>
 </html>
+
