--- a/movie.html
+++ b/movie.html
@@ -115,9 +115,9 @@
 
   <!-- Navbar -->
   <div class="navbar">
-    <div class="logo" onclick="window.location.href='home.html'">STREAM VERSE</div>
+    <div class="logo" onclick="window.location.href='index.html'">STREAM VERSE</div>
     <div class="nav-links">
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="TVshow.html">TV Shows</a>
       <a href="movie.html" class="active">Movies</a>
       <a href="mylist.html">My List</a>
@@ -282,3 +282,4 @@
   </script>
 </body>
 </html>
+
