--- a/mylist.html
+++ b/mylist.html
@@ -79,9 +79,9 @@
 <body>
 
   <div class="navbar">
-    <div class="logo" onclick="window.location.href='home.html'">STREAM VERSE</div>
+    <div class="logo" onclick="window.location.href='index.html'">STREAM VERSE</div>
     <div class="nav-links">
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="TVshow.html">TV Shows</a>
       <a href="movie.html">Movies</a>
       <a href="mylist.html" class="active">My List</a>
@@ -129,4 +129,5 @@
   </script>
 
 </body>
+
 </html>
