--- a/watchparty.html
+++ b/watchparty.html
@@ -191,9 +191,9 @@
 
   <!-- Navbar -->
   <div class="navbar">
-    <div class="logo" onclick="window.location.href='home.html'">TELEPARTY</div>
+    <div class="logo" onclick="window.location.href='index.html'">TELEPARTY</div>
     <div class="links">
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="home.html">Leave Room</a>
     </div>
   </div>
@@ -469,4 +469,5 @@
   </script>
 
 </body>
+
 </html>
